# command-rs

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml
args/: Cargo.toml
args/src/: lib.rs  parse.rs
src/: child.rs  command.rs  fake_waker.rs  lib.rs  output.rs  readable_future.rs  status.rs  sudo.rs  waitpid.rs
src/sudo/: macos.rs  windows.rs
src/waitpid/: macos.rs  windows.rs
winbindings/: Cargo.toml  build.rs
