[package]
name = "command-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.8.0"

# optional dependencies
args_macro = {path = "args",optional=true}
kiruna = {path = "../kiruna", optional = true}
dispatchr = {git = "https://github.com/drewcrawford/dispatchr.git", optional = true}

[target.'cfg(target_os="windows")'.dependencies]
winbindings = {path = "winbindings"}

[target.'cfg(target_os="macos")'.dependencies]
libc = "0.2"

[features]
# enables use of the args! macro
args = ["args_macro"]
# enables reading of process output
output = ["kiruna/io_stream","kiruna/join","dispatchr"]
sudo = ["kiruna/io_stream"]

[dev-dependencies.kiruna]
path = "../kiruna"
features = ["test"]



